settings deploy
